--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <title>FoodDiary</title>
   <base href="/">
+  <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script>
+
+  </script>
 </body>
 </html>
