add key to get fb to show

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,16 @@
 <body>
   <app-root>Loading...</app-root>
   <script>
-
-  </script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyA8-0CWE3N1VguVDACPx9VC7ZTKZ5qgeek",
+    authDomain: "food-logger-1151f.firebaseapp.com",
+    databaseURL: "https://food-logger-1151f.firebaseio.com",
+    projectId: "food-logger-1151f",
+    storageBucket: "food-logger-1151f.appspot.com",
+    messagingSenderId: "205657362428"
+  };
+  firebase.initializeApp(config);
+</script>
 </body>
 </html>
